navigation preventing you from clicking content behind it

--- a/components/navigation/style.module.less
+++ b/components/navigation/style.module.less
@@ -1,17 +1,28 @@
 @import '../../style/vars';
 
 .navigation {
+    @padding: 1rem;
+
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
     font-size: @font-size-l;
     font-weight: 200;
-    height: @nav-height;
     text-shadow: 0 0 5px rgba(255,255,255,.1);
+
+    &_main, &_about {
+        position: absolute;
+        bottom: @padding;
+    }
+
+    &_about {
+        left: @padding;
+    }
+
+    &_main {
+        right: @padding;
+    }
 
     a {
         text-decoration: none;
